@@ -33,8 +33,8 @@ VFN=valueForName
 currentTime=time.time
 __CHEETAH_version__ = '2.0rc8'
 __CHEETAH_versionTuple__ = (2, 0, 0, 'candidate', 8)
-__CHEETAH_genTime__ = 1189794092.422076
-__CHEETAH_genTimestamp__ = 'Fri Sep 14 14:21:32 2007'
+__CHEETAH_genTime__ = 1189799645.5265479
+__CHEETAH_genTimestamp__ = 'Fri Sep 14 15:54:05 2007'
 __CHEETAH_src__ = 'webui_templates/master.tmpl'
 __CHEETAH_srcLastModified__ = 'Fri Sep 14 14:19:18 2007'
 __CHEETAH_docstring__ = 'Autogenerated by CHEETAH: The Python-Powered Template Engine'
