@@ -14,6 +14,9 @@ Cobbler CHANGELOG
 - added Apache proxying around XMLRPC port for wider network access
 - refactor XMLRPC API and establish a read-write API
 - allow for configuring of read-write XMLRPC users in /etc/cobbler/auth.conf
+- WebUI
+- packaged /var/lib/cobbler/settings as a config file
+- added BuildRequires to help build on other platforms
  
 * Thu Aug 30 2007 - 0.6.1
 - re enable --resolve in yumdownloader (cobbler repo mgmt feature)
